[package]
name = "HC12-RTLSDR-Demodulator"
version = "0.1.0"
edition = "2021"
authors = ["Karsten"]
description = "HC12 Demodulator using a RTLSDR dongle."

[dependencies]
rtlsdr = "0.1.4"
num-complex = "0.4.6"
rustfft = "6.1"
crossbeam-channel = "0.5.15"
eframe = "0.33.3"
egui = "0.33.3"
egui_plot = "0.34.0"
